<resources>
    <string name="app_name">HAMA</string>
    <string name="hashi_app">HASHI APP</string>
    <string name="admin">Admin</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="livingroom">LIVINGROOM</string>
    <string name="select">Select Device</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="HAMA">HASHI APP</string>
    <string name="email">Email</string>
    <string name="garage">GARAGE</string>
    <string name="securityCameras">CAMERAS</string>
    <string name="remove_user">Remove User</string>
    <string name="guestUser">User</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="namepop">Name</string>
    <string name="passwordpop">Password</string>
    <string name="fire_gas_leak">FIRE/GAS LEAK</string>
    <string name="movement">MOVEMENT</string>
    <string name="network_cut">NETWORK CUT</string>
    <string name="power_cut">POWER CUT</string>
    <string name="alert_triggered">ALERT TRIGGERED</string>
</resources>